# HR_AGENT

./: .dockerignore  .env.example  .gitignore  Deploy.yml  Docker compose.yml  Dockerfile  HR_Agent_ROI_Analysis.docx  README.md  ec2_setup.sh  github_agent.ipynb  hitl_bridge.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: Ci.yml  Deploy.yml
src/hr_agent/config/: settings.py
src/hr_agent/core/: llm.py  models.py  state.py
src/hr_agent/graph/: pipeline.py
src/hr_agent/nodes/: decision_engine.py  email_nodes.py  final_review.py  github_scorer.py  hitl_node.py  profile_extractor.py  resume_extractor.py  resume_scorer.py  synthesizer.py
src/hr_agent/nodes/workers/: base_worker.py  config_worker.py  infra_worker.py  notebook_worker.py  python_worker.py  readme_worker.py
src/hr_agent/tools/: github_client.py  helpers.py  input_validator.py  llm_utils.py  logger.py  resume_parser.py
